style: fix page overflow issues

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -9,4 +9,5 @@ html, body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  width: 100vw;
 }
